<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:autofillHints="false"
        android:inputType="none"
        android:padding="@dimen/edit_text_padding"
        android:text="@string/enter_a_value"
        android:textSize="@dimen/edit_text_text_size"
        tools:ignore="LabelFor" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonC"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonC"
            android:textColor="@color/cinnabar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBrackets"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonBrackets"
            android:textColor="@color/blue_pigment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonPercent"
            android:textColor="@color/blue_pigment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDiv"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonDiv"
            android:textColor="@color/blue_pigment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMulti"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonMulti"
            android:textColor="@color/blue_pigment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonMinus"
            android:textColor="@color/blue_pigment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonPlus"
            android:textColor="@color/blue_pigment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonModule"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonModule" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/button0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:text="@string/buttonDot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEqual"
            style="@style/CalcButton"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_pigment"
            android:text="@string/buttonEqual"
            android:textColor="@color/white" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_width"
        android:layout_weight="1" />

</LinearLayout>